crates/kadou-core/tests/snapshots/header_fixtures__bad_duplicate_key.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "duplicate key `about`",
        fix: None,
        line: 4,
        col: 3,
        len: 5,
    },
]
