crates/kadou-core/tests/snapshots/header_fixtures__bad_missing_risk.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "risk is required",
        fix: Some(
            "add `# risk:  low`, `medium`, `high`, or `critical`",
        ),
        line: 2,
        col: 1,
        len: 5,
    },
]
