crates/kadou-core/tests/snapshots/header_fixtures__bad_reserved_need_name.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "invalid need name `shell`: this name is reserved because it would shadow a shell/env variable",
        fix: None,
        line: 5,
        col: 3,
        len: 5,
    },
]
