crates/kadou-core/tests/snapshots/header_fixtures__bad_select_without_options.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "select without options",
        fix: Some(
            "list at least one option, e.g. `select a|b|c`",
        ),
        line: 6,
        col: 11,
        len: 6,
    },
]
