crates/kadou-core/tests/snapshots/header_fixtures__bad_unclosed_header.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "header not closed",
        fix: Some(
            "every line until the closing `# ---` must start with `#`",
        ),
        line: 5,
        col: 1,
        len: 7,
    },
]
